增加输入输出及数据类型

--- a/python基础.ipynb
+++ b/python基础.ipynb
@@ -1,13 +1,249 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1b68ac75",
+   "metadata": {},
+   "source": [
+    "# 输入和输出"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aa0d2aa",
+   "metadata": {},
+   "source": [
+    "## 输出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1201b2a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "hello world hello world hello world\n",
+      "100\n",
+      "100 100 100\n",
+      "200\n",
+      "100+100 = 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 输出字符串\n",
+    "print(\"hello world\")\n",
+    "# 输出多个字符串\n",
+    "print(\"hello world\", \"hello world\", \"hello world\")\n",
+    "# 输出整数\n",
+    "print(100)\n",
+    "# 输出多个整数\n",
+    "print(100, 100, 100)\n",
+    "# 输出计算结果\n",
+    "print(100+100)\n",
+    "# 输出字符串加计算结果\n",
+    "print(\"100+100 =\", 100+100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d53196b3",
+   "metadata": {},
+   "source": [
+    "## 输入"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "430f6b9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello lizi\n",
+      "<class 'str'>\n",
+      "age: 21\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字符串输入\n",
+    "name = input(\"请输入你的名字：\")\n",
+    "print(\"hello\", name)\n",
+    "print(type(name))\n",
+    "# 强制转换为数字\n",
+    "age = int(input(\"请输入你的年龄：\"))\n",
+    "print(\"age:\", age)\n",
+    "print(type(age))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0f7b3a0",
+   "metadata": {},
+   "source": [
+    "# 数据类型和变量"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ff99290",
+   "metadata": {},
+   "source": [
+    "## 整数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1f597334",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e9a9d7f",
+   "metadata": {},
+   "source": [
+    "## 浮点数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "29887a51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.23\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1.23\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b57007f",
+   "metadata": {},
+   "source": [
+    "## 字符串"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ee1349fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "<class 'str'>\n",
+      "hello\n",
+      "world\n",
+      "hello\tworld\n",
+      "hello\\nworld\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 普通字符串\n",
+    "a = 'hello world'\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "# 换行符\n",
+    "a = 'hello\\nworld'\n",
+    "print(a)\n",
+    "# 缩进符\n",
+    "a = 'hello\\tworld'\n",
+    "print(a)\n",
+    "# 原始字符串->忽略所有转义符\n",
+    "a = r'hello\\nworld'\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad07ff66",
+   "metadata": {},
+   "source": [
+    "## 布尔值"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f3c9d0c",
+   "id": "7e6abebe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "<class 'bool'>\n",
+      "<class 'bool'>\n",
+      "True and True = True\n",
+      "True and False = False\n",
+      "False and False = False\n",
+      "True or True = True\n",
+      "True or False = True\n",
+      "False or False = False\n",
+      "not True = False\n",
+      "not False = True\n"
+     ]
+    }
+   ],
    "source": [
-    "print('hello world')"
+    "# 布尔值只有两种，True和False\n",
+    "print(True)\n",
+    "print(False)\n",
+    "print(type(True))\n",
+    "print(type(False))\n",
+    "\n",
+    "# 逻辑运算符\n",
+    "print(\"True and True =\", True and True)\n",
+    "print(\"True and False =\", True and False)\n",
+    "print(\"False and False =\", False and False)\n",
+    "print(\"True or True =\", True or True)\n",
+    "print(\"True or False =\", True or False)\n",
+    "print(\"False or False =\", False or False)\n",
+    "print(\"not True =\", not True)\n",
+    "print(\"not False =\", not False)"
    ]
   }
  ],
