增加字符串编码,条件判断,循环,函数

--- a/python基础.ipynb
+++ b/python基础.ipynb
@@ -18,23 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "1201b2a9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n",
-      "hello world hello world hello world\n",
-      "100\n",
-      "100 100 100\n",
-      "200\n",
-      "100+100 = 200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 输出字符串\n",
     "print(\"hello world\")\n",
@@ -60,21 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "430f6b9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello lizi\n",
-      "<class 'str'>\n",
-      "age: 21\n",
-      "<class 'int'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 字符串输入\n",
     "name = input(\"请输入你的名字：\")\n",
@@ -104,19 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "1f597334",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "<class 'int'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 10\n",
     "print(a)\n",
@@ -133,19 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "29887a51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.23\n",
-      "<class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 1.23\n",
     "print(a)\n",
@@ -162,23 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "ee1349fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n",
-      "<class 'str'>\n",
-      "hello\n",
-      "world\n",
-      "hello\tworld\n",
-      "hello\\nworld\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 普通字符串\n",
     "a = 'hello world'\n",
@@ -208,26 +153,7 @@
    "execution_count": null,
    "id": "7e6abebe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n",
-      "<class 'bool'>\n",
-      "<class 'bool'>\n",
-      "True and True = True\n",
-      "True and False = False\n",
-      "False and False = False\n",
-      "True or True = True\n",
-      "True or False = True\n",
-      "False or False = False\n",
-      "not True = False\n",
-      "not False = True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 布尔值只有两种，True和False\n",
     "print(True)\n",
@@ -244,6 +170,621 @@
     "print(\"False or False =\", False or False)\n",
     "print(\"not True =\", not True)\n",
     "print(\"not False =\", not False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd3a097",
+   "metadata": {},
+   "source": [
+    "## 空值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "690e8ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = None\n",
+    "print(a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37e997da",
+   "metadata": {},
+   "source": [
+    "## 列表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d986aa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 一维列表->有序集合，元素可增删，\n",
+    "# 列表索引从0开始\n",
+    "classmates = ['Michael', 'Bob', 'Tracy']\n",
+    "print(classmates)\n",
+    "print(len(classmates))\n",
+    "print(classmates[0])\n",
+    "print(classmates[-1])\n",
+    "# 在列表末尾添加一个新元素\n",
+    "classmates.append('Adam')\n",
+    "print(classmates)\n",
+    "# 在列表的第二个位置插入一个新元素\n",
+    "classmates.insert(1, 'Jack')\n",
+    "print(classmates)\n",
+    "# 删除列表末尾的元素\n",
+    "classmates.pop()\n",
+    "print(classmates)\n",
+    "print(type(classmates))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64ad29d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 多维列表\n",
+    "age = [[19], [20], [21]]\n",
+    "print(age[0][0])\n",
+    "age = [[22,23], [24,25], [26,27]]\n",
+    "print(age[0][1])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05efa51d",
+   "metadata": {},
+   "source": [
+    "## 元组"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab590ee2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 元组也是有序列表，但不能修改\n",
+    "t = ('a', 'b', 'c', 'd')\n",
+    "print(t[0])\n",
+    "print(type(t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e08fefd",
+   "metadata": {},
+   "source": [
+    "## 字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5184cf6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 字典使用键-值存储\n",
+    "d = {'name': 'Bob', 'age': 20, 'score': 88}\n",
+    "print(d['name'])\n",
+    "# 创建字典\n",
+    "d = {}\n",
+    "# 添加键值对\n",
+    "d['name'] = 'Bob'\n",
+    "print(d['name'])\n",
+    "print(d.get('name'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7566596c",
+   "metadata": {},
+   "source": [
+    "## 集合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf58f798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 集合是一组值的集合，集合中的元素是唯一的\n",
+    "s = {1,2,3}\n",
+    "print(s)\n",
+    "print(type(s))\n",
+    "\n",
+    "# 也可以提供集合的元素\n",
+    "s = set([1, 1, 2, 2, 3, ])\n",
+    "print(s)\n",
+    "s.remove(1)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcb1a506",
+   "metadata": {},
+   "source": [
+    "# 字符串和编码"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a461836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ord()函数获取字符的整数表示\n",
+    "print(ord('A'))\n",
+    "print(ord('中'))\n",
+    "# chr()函数把编码转换为对应的字符\n",
+    "print(chr(66))\n",
+    "print(chr(25991))\n",
+    "\n",
+    "# 获取字符串长度\n",
+    "print(len('abc'))\n",
+    "print(len('中国'))\n",
+    "\n",
+    "# 获取字符串的编码\n",
+    "print('abc'.encode('utf-8'))\n",
+    "print('中国'.encode('utf-8'))\n",
+    "\n",
+    "# 占位符    %d 整数 %s 字符串 %f 浮点数 %.2f 浮点数保留两位 %x 十六进制整数\n",
+    "print('%d' % 123)\n",
+    "print('%s' % 'abc')\n",
+    "print('%.2f' % 123.456)\n",
+    "print('%x' % 255)\n",
+    "\n",
+    "# format()格式化字符串\n",
+    "print('Hello, {0}, 成绩提升了 {1:.1f}%'.format('小明', 17.125))\n",
+    "# f-string格式化字符串\n",
+    "r = 2.5\n",
+    "s = 3.14 * r ** 2\n",
+    "print(f'The area of a circle with radius {r} is {s:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef883633",
+   "metadata": {},
+   "source": [
+    "# 条件判断"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78505596",
+   "metadata": {},
+   "source": [
+    "## if-else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "309dfa76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = 20\n",
+    "if age >= 18:\n",
+    "    print('adult')\n",
+    "elif age >= 6:\n",
+    "    print('teenager')\n",
+    "else:\n",
+    "    print('kid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "049033c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "birth = int(input('birth: '))\n",
+    "if birth < 2000:\n",
+    "    print('00前')\n",
+    "else:\n",
+    "    print('00后')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c743cb7b",
+   "metadata": {},
+   "source": [
+    "## match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2771304d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 简单匹配\n",
+    "score = 'B'\n",
+    "\n",
+    "match score:\n",
+    "    case 'A':\n",
+    "        print('score is A.')\n",
+    "    case 'B':\n",
+    "        print('score is B.')\n",
+    "    case 'C':\n",
+    "        print('score is C.')\n",
+    "    case _: # _表示匹配到其他任何情况\n",
+    "        print('score is ???.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28e1739f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 复杂匹配\n",
+    "age = 15\n",
+    "\n",
+    "match age:\n",
+    "    case x if x < 10:\n",
+    "        print(f'< 10 years old: {x}')\n",
+    "    case 10:\n",
+    "        print('10 years old.')\n",
+    "    case 11 | 12 | 13 | 14 | 15 | 16 | 17 | 18:\n",
+    "        print('11~18 years old.')\n",
+    "    case 19:\n",
+    "        print('19 years old.')\n",
+    "    case _:\n",
+    "        print('not sure.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8818afa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 匹配列表\n",
+    "args = ['gcc', 'hello.c', 'world.c']\n",
+    "# args = ['clean']\n",
+    "# args = ['gcc']\n",
+    "\n",
+    "match args:\n",
+    "    # 如果仅出现gcc，报错:\n",
+    "    case ['gcc']:\n",
+    "        print('gcc: missing source file(s).')\n",
+    "    # 出现gcc，且至少指定了一个文件:\n",
+    "    case ['gcc', file1, *files]:\n",
+    "        print('gcc compile: ' + file1 + ', ' + ', '.join(files))\n",
+    "    # 仅出现clean:\n",
+    "    case ['clean']:\n",
+    "        print('clean')\n",
+    "    case _:\n",
+    "        print('invalid command.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c346f172",
+   "metadata": {},
+   "source": [
+    "# 循环"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfd52aaa",
+   "metadata": {},
+   "source": [
+    "## for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e0224a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = ['Michael', 'Bob', 'Tracy']\n",
+    "for name in names:\n",
+    "    print(name)\n",
+    "\n",
+    "sum = 0\n",
+    "for x in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]:\n",
+    "    sum = sum + x\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f26544af",
+   "metadata": {},
+   "source": [
+    "## while"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc451c20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum = 0\n",
+    "n = 99\n",
+    "while n > 0:\n",
+    "    sum = sum + n\n",
+    "    n = n - 2\n",
+    "print(sum)\n",
+    "\n",
+    "n = 1\n",
+    "while n <= 20:\n",
+    "    if n > 10: # 当n = 11时，条件满足，执行break语句\n",
+    "        break # break语句会结束当前循环\n",
+    "    print(n)\n",
+    "    n = n + 1\n",
+    "print('END')\n",
+    "\n",
+    "n = 0\n",
+    "while n < 10:\n",
+    "    n = n + 1\n",
+    "    if n % 2 == 0: # 如果n是偶数，执行continue语句\n",
+    "        continue # continue语句会直接继续下一轮循环，后续的print()语句不会执行\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcfbce9e",
+   "metadata": {},
+   "source": [
+    "# 函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fe39bb2",
+   "metadata": {},
+   "source": [
+    "## 定义函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60014817",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_abs(x):\n",
+    "    if not isinstance(x, (int, float)):\n",
+    "        raise TypeError('bad operand type')\n",
+    "    if x >= 0:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return -x\n",
+    "\n",
+    "print(my_abs(-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3d42724",
+   "metadata": {},
+   "source": [
+    "## 空函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b6bd1f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass用来占位\n",
+    "def nop():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a89b92ad",
+   "metadata": {},
+   "source": [
+    "## 函数的参数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0a7bfb4",
+   "metadata": {},
+   "source": [
+    "### 位置参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65520d2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def power(x, n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    while n > 0:\n",
+    "        return x * power(x, n-1)\n",
+    "\n",
+    "print(power(2, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e04a3ef",
+   "metadata": {},
+   "source": [
+    "### 默认参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7206f61f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def power(x, n=2):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    while n > 0:\n",
+    "        return x * power(x, n-1)\n",
+    "    \n",
+    "print(power(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d338d9c",
+   "metadata": {},
+   "source": [
+    "### 可变参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7469378e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc(*numbers):\n",
+    "    sum = 0\n",
+    "    for n in numbers:\n",
+    "        sum = sum + n * n\n",
+    "    return sum\n",
+    "\n",
+    "print(calc(1, 2, 3, 4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb781a95",
+   "metadata": {},
+   "source": [
+    "### 关键字参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c9afc02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def person(name, age, **kw):\n",
+    "    print('name:', name, 'age:', age, 'other:', kw)\n",
+    "\n",
+    "person('Michael', 30)\n",
+    "person('Bob', 35, city='Beijing')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b483941e",
+   "metadata": {},
+   "source": [
+    "### 命名关键字参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba4278d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def person(name, age, **kw):\n",
+    "    if 'city' in kw:\n",
+    "        # 有city参数\n",
+    "        pass\n",
+    "    if 'job' in kw:\n",
+    "        # 有job参数\n",
+    "        pass\n",
+    "    print('name:', name, 'age:', age, 'other:', kw)\n",
+    "\n",
+    "person('Jack', 24, city='Beijing', addr='Chaoyang', zipcode=123456)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddfc1f9c",
+   "metadata": {},
+   "source": [
+    "### 参数组合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31359875",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f1(a, b, c=0, *args, **kw):\n",
+    "    print('a =', a, 'b =', b, 'c =', c, 'args =', args, 'kw =', kw)\n",
+    "\n",
+    "def f2(a, b, c=0, *, d, **kw):\n",
+    "    print('a =', a, 'b =', b, 'c =', c, 'd =', d, 'kw =', kw)\n",
+    "\n",
+    "f1(1, 2, 3, 'a', 'b', 'c', x=99, y=98)\n",
+    "f2(1, 2, d=99, e=98, f=97)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb7893eb",
+   "metadata": {},
+   "source": [
+    "## 递归函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "313c6af7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 函数在内部调用自身\n",
+    "# 阶乘n! = 1 x 2 x 3 x ... x n\n",
+    "def fact(n):\n",
+    "    if n==1:\n",
+    "        return 1\n",
+    "    return n * fact(n - 1)\n",
+    "\n",
+    "print(fact(5))"
    ]
   }
  ],
