增加了部分高级特性

--- a/python基础.ipynb
+++ b/python基础.ipynb
@@ -59,7 +59,15 @@
     "# 强制转换为数字\n",
     "age = int(input(\"请输入你的年龄：\"))\n",
     "print(\"age:\", age)\n",
-    "print(type(age))\n"
+    "print(type(age))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f10c080",
+   "metadata": {},
+   "source": [
+    "# Python基础"
    ]
   },
   {
@@ -67,7 +75,7 @@
    "id": "b0f7b3a0",
    "metadata": {},
    "source": [
-    "# 数据类型和变量"
+    "## 数据类型和变量"
    ]
   },
   {
@@ -75,7 +83,7 @@
    "id": "5ff99290",
    "metadata": {},
    "source": [
-    "## 整数"
+    "### 整数"
    ]
   },
   {
@@ -95,7 +103,7 @@
    "id": "0e9a9d7f",
    "metadata": {},
    "source": [
-    "## 浮点数"
+    "### 浮点数"
    ]
   },
   {
@@ -115,7 +123,7 @@
    "id": "4b57007f",
    "metadata": {},
    "source": [
-    "## 字符串"
+    "### 字符串"
    ]
   },
   {
@@ -145,7 +153,7 @@
    "id": "ad07ff66",
    "metadata": {},
    "source": [
-    "## 布尔值"
+    "### 布尔值"
    ]
   },
   {
@@ -177,7 +185,7 @@
    "id": "6cd3a097",
    "metadata": {},
    "source": [
-    "## 空值"
+    "### 空值"
    ]
   },
   {
@@ -197,7 +205,7 @@
    "id": "37e997da",
    "metadata": {},
    "source": [
-    "## 列表"
+    "### 列表"
    ]
   },
   {
@@ -246,7 +254,7 @@
    "id": "05efa51d",
    "metadata": {},
    "source": [
-    "## 元组"
+    "### 元组"
    ]
   },
   {
@@ -267,7 +275,7 @@
    "id": "4e08fefd",
    "metadata": {},
    "source": [
-    "## 字典"
+    "### 字典"
    ]
   },
   {
@@ -293,7 +301,7 @@
    "id": "7566596c",
    "metadata": {},
    "source": [
-    "## 集合"
+    "### 集合"
    ]
   },
   {
@@ -320,7 +328,7 @@
    "id": "dcb1a506",
    "metadata": {},
    "source": [
-    "# 字符串和编码"
+    "## 字符串和编码"
    ]
   },
   {
@@ -364,7 +372,7 @@
    "id": "ef883633",
    "metadata": {},
    "source": [
-    "# 条件判断"
+    "## 条件判断"
    ]
   },
   {
@@ -372,7 +380,7 @@
    "id": "78505596",
    "metadata": {},
    "source": [
-    "## if-else"
+    "### if-else"
    ]
   },
   {
@@ -410,7 +418,7 @@
    "id": "c743cb7b",
    "metadata": {},
    "source": [
-    "## match"
+    "### match"
    ]
   },
   {
@@ -488,7 +496,7 @@
    "id": "c346f172",
    "metadata": {},
    "source": [
-    "# 循环"
+    "## 循环"
    ]
   },
   {
@@ -496,7 +504,7 @@
    "id": "dfd52aaa",
    "metadata": {},
    "source": [
-    "## for"
+    "### for"
    ]
   },
   {
@@ -521,7 +529,7 @@
    "id": "f26544af",
    "metadata": {},
    "source": [
-    "## while"
+    "### while"
    ]
   },
   {
@@ -785,6 +793,107 @@
     "    return n * fact(n - 1)\n",
     "\n",
     "print(fact(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54bbf191",
+   "metadata": {},
+   "source": [
+    "# 高级特性"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91b680ce",
+   "metadata": {},
+   "source": [
+    "## 切片"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45fb1233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 切片就是对一个数组取出部分索引的元素\n",
+    "a = [1,2,3,4,5,6,7,8,9,10]\n",
+    "print(a[0:5])   #0-5索引的元素，左闭右开\n",
+    "print(a[5:])    #5-末尾索引的元素，左开\n",
+    "print(a[:5])    #0-5索引的元素，左闭右开\n",
+    "print(a[::2])   #0-末尾索引的元素，步长为2\n",
+    "print(a[::-1])  #0-末尾索引的元素，步长为-1，倒序"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0ccf535",
+   "metadata": {},
+   "source": [
+    "## 迭代"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cb4bb07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 给定一个list or tuple, 通过for循环遍历这个list or tuple，这种遍历我们称为迭代\n",
+    "l = [1, 2, 3, 4, 5]\n",
+    "for i in l:\n",
+    "    print(i)\n",
+    "\n",
+    "d = {'a': 1, 'b': 2, 'c': 3}\n",
+    "for k in d.keys():\n",
+    "    print(k)\n",
+    "for v in d.values():\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90621b46",
+   "metadata": {},
+   "source": [
+    "## 列表生成式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f40a9b94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 一般要生成[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]，可以用下面方法\n",
+    "print(list(range(1, 11)))\n",
+    "# 列表生成式\n",
+    "print([x for x in range(1, 11)])\n",
+    "\n",
+    "# 如果要生成[1x1, 2x2, 3x3, ..., 10x10]\n",
+    "l = []\n",
+    "for x in range(1, 11):\n",
+    "    l.append(x * x)\n",
+    "print(l)\n",
+    "# 列表生成式\n",
+    "print([x * x for x in range(1, 11)])\n",
+    "# 如果要筛选偶数的平方\n",
+    "print([x * x for x in range(1, 11) if x % 2 == 0])\n",
+    "\n",
+    "# 列表生成式\n",
+    "print([m + n for m in 'ABC' for n in 'XYZ'])\n",
+    "\n",
+    "# 列表生成式可以使用两个变量\n",
+    "d = {'x': 'A', 'y': 'B', 'z': 'C' }\n",
+    "print([k + '=' + v for k, v in d.items()])\n",
+    "\n",
+    "# 列表生成式中的if else\n",
+    "print([x for x in range(1,11) if x % 2 == 0])\n",
+    "print([x if x % 2 == 0 else -x for x in range(1, 11)])"
    ]
   }
  ],
